--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,7 +57,7 @@
     
     <div class="center"><h4>Donate with your preferred payment method: </h4></div>
     <div>
-    <div class="center"><button mat-stroked-button>PNC Cares</button><button mat-stroked-button>PayPal</button><button mat-stroked-button>Credit Card</button></div>
+    <div class="center"><button mat-stroked-button (click)="openForm()">PNC Cares</button><button mat-stroked-button>PayPal</button><button mat-stroked-button>Credit Card</button></div>
     </div>
     </div>
   </mat-card>
