--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .button {
     box-shadow: inset 0 1px 0 0 #ffffff;
     background: #ffffff linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-    
+
     border: 1px solid #dcdcdc;
     display: inline-block;
     cursor: pointer;
@@ -31,11 +31,11 @@
     max-width: 800px;
   }
 
-  .main-div{
-    
+  .main-div {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 80px;
   }
 
   .center {
@@ -47,6 +47,7 @@
 
   .thick {
     height: 80px;
+    margin-bottom: 20px;
   }
 
   .footer {
@@ -54,7 +55,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 8%;
+    height: 60px;
     background-color: #424e5a;
     color: white;
     text-align: center;
@@ -76,15 +77,6 @@
     height: 60%;
     line-height: 30px;
     max-width: 200px;
-  }
-  
-  body {
-    height: 78vh;
-    width: 100vw;
-  }
-  div {
-    height: 100%;
-    width: 100%;
   }
 
   mat-icon {
