--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,27 +4,32 @@
   </mat-toolbar>
     <div class="main-div">
       <mat-card class="example-card">
-        <nav class="center">
-          <a class="button"
-          routerLink="/one-time"
-          routerLinkActive="activebutton"
-          ariaCurrentWhenActive="page">
-          ONE TIME
-        </a>
-        <a class="button"
-        routerLink="/monthly"
-        routerLinkActive="activebutton"
-        ariaCurrentWhenActive="page">
-        MONTHLY
-      </a>
-    </nav>
-    <p><router-outlet></router-outlet></p>
-
-
+    
+    <div class="center">
+    <div *ngFor="let occurence of occurences" class="occ">
+      <input
+      type="radio"
+      name="occurenceOfDonation"
+      value="{{occurence}}"
+      (change)="radioChangeHandler2($event)">
+      <label>{{occurence}}</label>
+    </div>
+    </div>
+    <br>
+    <p><span>Choose a </span><b>{{selectedOccurence}}</b><span> donation amount</span></p>
+    <div *ngFor="let amount of amounts" class="donate-now">
+      <input
+      type="radio"
+      name="amountOfDonation"
+      value="{{amount}}"
+      (change)="radioChangeHandler($event)">
+      <label>{{amount}}</label>
+    </div>
     <br>
     <br>
     <br>
     <br>
+  
 
     <mat-divider></mat-divider>
     <br>
@@ -49,7 +54,9 @@
     <mat-divider></mat-divider>
     <div class="row">
       <br>
-      <div class="center"><h3>Total Donation:</h3></div>
+      <div class="center"><p><span>Total </span><b>{{selectedOccurence}}</b><span> Donation:</span></p></div>
+      <div class="center"><h1><b>{{selectedAmount}}</b></h1></div>
+      
 
       <div class="center"><h4>Donate with your preferred payment method: </h4></div>
       <div>
