--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,16 +36,16 @@
     <h2>Your Information</h2>
     <mat-form-field class="name" appearance="outline">
       <mat-label>First Name</mat-label>
-      <input matInput placeholder="">
+      <input matInput placeholder="" required>
     </mat-form-field>
     <mat-form-field class="name" appearance="outline">
       <mat-label>Last Name</mat-label>
-      <input matInput placeholder="">
+      <input matInput placeholder="" required>
     </mat-form-field>
     <p>
       <mat-form-field class="email" appearance="outline">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="">
+        <input matInput placeholder="donate@example.com" required>
         <mat-hint>Your receipt will be emailed here.</mat-hint>
       </mat-form-field>
     </p>
