--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -86,8 +86,7 @@
   border-radius: 5px;
 }
 
-.donate-now input[type="radio"]:checked+label,
-.Checked+label {
+.donate-now .selected {
   background: #F44336;
   color: white;
   border-radius: 5px;
@@ -150,8 +149,7 @@ box-shadow: inset 0 1px 0 0 #ffffff;
   border-radius: 5px;
 }
 
-.occ input[type="radio"]:checked+label,
-.Checked+label {
+.occ .selected {
     box-shadow: inset 0 1px 0 0 #03172c;
     background: #03172c;
     border: 1px solid #03172c;
