--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
       <div class="center"><h4>Donate with your preferred payment method: </h4></div>
       <div>
         <div class="center">
-          <a href="#" (click)="pncAuth()" mat-stroked-button>PNC Cares</a>
+          <a href="#" (click)="pncAuth()" mat-stroked-button>PNC</a>
           <button mat-stroked-button>PayPal</button>
           <button mat-stroked-button>Credit Card</button>
         </div>
